# KG

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Linear import.csv  Makefile  README.md  config.py  config.yaml  pyproject.toml  requirements.txt  workday_ai_knowledge_graph_readme.md
data_manifests/seeds/: README.md  blog.csv  investor_relations.csv  media.csv  press_releases.csv  sec_filings.csv  transcripts.csv
docs/: acceptance_questions.md  data_sources.md  modeling.md  mvp_scope.md  risk_register.md  validation.md
ingest/: __init__.py  domains.py  main.py  rate_limiter.py  robots.py  url_utils.py
kg/: __init__.py  schema.py
measures/: __init__.py  main.py
model/: __init__.py  main.py
process/: __init__.py  main.py
tests/: test_ingest.py  test_placeholder.py
