[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "workday-kg"
version = "0.1.0"
description = "Knowledge graph modeling Workday AI evolution"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Academic Use Only"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
